[package]
name = "firetcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
nix = "0.26"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[[bin]]
name = "arp"
path = "src/bin/arp.rs"

[[bin]]
name = "icmp"
path = "src/bin/icmp.rs"

[[bin]]
name = "udp"
path = "src/bin/udp.rs"